Correction des bouttons filtres en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -614,10 +614,12 @@ button:hover {
 
   .filter-group {
     font-size: 1.4rem;
+    justify-content: space-between;
   }
 
   .filter {
-    flex: 1;
+    flex: 1 0 calc(50% - 10px);
+    min-width: 160px;
   }
 
   .offers-main,
